--- a/front/src/App.css
+++ b/front/src/App.css
@@ -28,3 +28,14 @@
     height: 300px;
     margin-bottom: 10px;
 }
+
+/* .link {
+    stroke: #000;
+    stroke-width: 1.5px;
+}
+
+.node {
+fill: #000;
+stroke: #fff;
+stroke-width: 1.5px;
+} */
